
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {TYPE_1__ sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;


 int AF_INET ;
 int SOCK_STREAM ;
 int close (int) ;
 scalar_t__ connect (int,struct sockaddr*,int) ;
 int htons (unsigned short) ;
 int perror (char*) ;
 int resolve (char*) ;
 int socket (int ,int ,int ) ;

int host_connect(char *hostname, unsigned short int port) {

        struct sockaddr_in sa;
 int fd;

        sa.sin_family = AF_INET;
        sa.sin_port = htons(port);
        fd = socket(AF_INET, SOCK_STREAM, 0);

        if (fd == -1)
  return(fd);

 if (!(sa.sin_addr.s_addr = resolve(hostname))) {
  close(fd);
                return(-1);
        }

 if (connect(fd, (struct sockaddr *)&sa, sizeof(struct sockaddr_in)) < 0) {
  perror("connect");
  close(fd);
  return(-1);
        }

        return(fd);
}
